--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+ font-family: 'Barlow';
+  src: url("./fonts/Barlow/Barlow-Regular.ttf");
+}
+
 :root{
 
   --primary-color: #005cff;
@@ -13,9 +18,9 @@
 }
 
 * {
-
+  font-family: Barlow,sans-serif;
   color: var(--white);
-
+  box-sizing: border-box;
 }
 
 .main-info {
@@ -33,6 +38,7 @@
 
 .decorate {
   color: var(--secondary-color);
+  font-weight: bold;
 }
 
 .main-description_elovers {
@@ -141,7 +147,7 @@ Luis
 }
 
 .button-practices {
-  text-align: center;
+  text-align: left;
   width: 150px;
   color: var(--white);
   background-color: var(--section-color);
@@ -149,6 +155,10 @@ Luis
   margin-top: 10px;
   height: 40px;
 
+}
+
+.button-practices img {
+  margin: 0 5px;
 }
 
 .button-practices:hover {
@@ -162,4 +172,46 @@ Luis
 
   background-color: var(--section-color-secondory);
   min-height: 100vh;
+}
+
+.practices_title, .practices_list {
+
+  color: var(--color-alternative);
+
+}
+
+.practices_title {
+  font-weight: bold;
+}
+
+.practices_list {
+  list-style: none;
+}
+
+.practices_documents, .practices_videos, .practices_other_files {
+
+  width: 250px;
+  color: var(--white);
+  border-radius:5px;
+  display: block;
+  margin-top: 10px;
+}
+
+.practices_documents {
+
+  background-color:  var(--color-alternative);
+}
+
+
+
+.practices_videos, .practices_other_files {
+
+  background-color: var(--primary-color);
+
+}
+
+.practices_title_description {
+
+  width: 500px;
+
 }
